--- a/.htaccess
+++ b/.htaccess
@@ -33,23 +33,36 @@ Header append Vary User-Agent env=!dont-vary
 
 # BEGIN Expire headers
 <IfModule mod_expires.c>
- ExpiresActive On
- ExpiresDefault "access plus 7200 seconds"
- ExpiresByType image/jpg "access plus 2592000 seconds"
- ExpiresByType image/jpeg "access plus 2592000 seconds"
- ExpiresByType image/png "access plus 2592000 seconds"
- ExpiresByType image/gif "access plus 2592000 seconds"
- AddType image/x-icon .ico
- ExpiresByType image/ico "access plus 2592000 seconds"
- ExpiresByType image/icon "access plus 2592000 seconds"
- ExpiresByType image/x-icon "access plus 2592000 seconds"
- ExpiresByType text/css "access plus 2592000 seconds"
- ExpiresByType text/javascript "access plus 2592000 seconds"
- ExpiresByType text/html "access plus 7200 seconds"
- ExpiresByType application/xhtml+xml "access plus 7200 seconds"
- ExpiresByType application/javascript A259200
- ExpiresByType application/x-javascript "access plus 2592000 seconds"
- ExpiresByType application/x-shockwave-flash "access plus 2592000 seconds"
+  ExpiresActive On
+
+ # Images
+  ExpiresByType image/jpeg "access plus 1 month"
+  ExpiresByType image/gif "access plus 1 month"
+  ExpiresByType image/png "access plus 1 month"
+  ExpiresByType image/webp "access plus 1 month"
+  ExpiresByType image/svg+xml "access plus 1 month"
+  ExpiresByType image/x-icon "access plus 1 month"
+
+  # Video
+  ExpiresByType video/webm "access plus 1 month"
+  ExpiresByType video/mp4 "access plus 1 month"
+  ExpiresByType video/mpeg "access plus 1 month"
+
+  # Fonts
+  ExpiresByType font/ttf "access plus 1 month"
+  ExpiresByType font/otf "access plus 1 month"
+  ExpiresByType font/woff "access plus 1 month"
+  ExpiresByType font/woff2 "access plus 1 month"
+  ExpiresByType application/font-woff "access plus 1 month"
+
+  # CSS, JavaScript
+  ExpiresByType text/css "access plus 1 month"
+  ExpiresByType text/javascript "access plus 1 month"
+  ExpiresByType application/javascript "access plus 1 month"
+
+  # Others
+  ExpiresByType application/pdf "access plus 1 month"
+  ExpiresByType image/vnd.microsoft.icon "access plus 1 month"
 </IfModule>
 # END Expire headers
 
